--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
+body {
+  width: 100%;
+  height: 100%;
+  margin: 50px;
+  text-align: center;
+}
+
 div {
   line-height: 50px;
   font-size: 30px;
-  /* vertical-align: center; */
+  vertical-align: center;
   font-family: arial;
 }
 
@@ -15,8 +22,7 @@ button {
   height: 50px;
   cursor: pointer;
   outline: none;
-  
 }
 button:disabled {
-  opacity: 0.3
+  opacity: 0.3;
 }
